fixed register feature, added multiple message receivers instead of just one, pass as an array for both single and multiple users