@@ -16,7 +16,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class ChatService {
@@ -32,16 +31,28 @@ public class ChatService {
 
     public String sendMessage(MessageDTO messageDto) {
         String senderUsername = messageDto.getSenderUsername();
-        String receiverUsername = messageDto.getReceiverUsername();
+        List<String> receiverUsernames = messageDto.getReceiverUsernames();
         String content = messageDto.getContent();
 
         User sender = userRepository.findByUsername(senderUsername)
                 .orElseThrow(() -> new RuntimeException("Sender not found"));
-        User receiver = userRepository.findByUsername(receiverUsername)
-                .orElseThrow(() -> new RuntimeException("Receiver not found"));
 
+        // Получение всех получателей
+        List<User> receivers = receiverUsernames.stream()
+                .map(username -> userRepository.findByUsername(username)
+                        .orElseThrow(() -> new RuntimeException("Receiver " + username + " not found")))
+                .toList();
+
+        // Включение отправителя в список участников
+        Set<User> participants = new HashSet<>(receivers);
+        participants.add(sender);
+
+        // Проверка наличия комнаты чата, где участвуют только эти участники
         Optional<ChatRoom> existingChatRoom = chatRoomRepository.findAll().stream()
-                .filter(chatRoom -> chatRoom.getUsers().contains(sender) && chatRoom.getUsers().contains(receiver))
+                .filter(chatRoom -> {
+                    Set<User> chatRoomUsers = chatRoom.getUsers();
+                    return chatRoomUsers.size() == participants.size() && chatRoomUsers.containsAll(participants);
+                })
                 .findFirst();
 
         ChatRoom chatRoom;
@@ -49,21 +60,21 @@ public class ChatService {
             chatRoom = existingChatRoom.get();
         } else {
             chatRoom = new ChatRoom();
-            Set<User> users = new HashSet<>();
-            users.add(sender);
-            users.add(receiver);
-            chatRoom.setUsers(users);
+            chatRoom.setUsers(participants);
             chatRoomRepository.save(chatRoom);
         }
 
-        Message message = new Message();
-        message.setSender(sender);
-        message.setReceiver(receiver);
-        message.setContent(content);
-        message.setTimestamp(LocalDateTime.now());
-        message.setChatRoom(chatRoom);
+        // Создание и сохранение сообщения для каждого получателя
+        for (User receiver : receivers) {
+            Message message = new Message();
+            message.setSender(sender);
+            message.setReceiver(receiver);  // Устанавливаем receiver
+            message.setContent(content);
+            message.setTimestamp(LocalDateTime.now());
+            message.setChatRoom(chatRoom);
 
-        messageRepository.save(message);
+            messageRepository.save(message);
+        }
 
         return "Message sent";
     }
@@ -76,6 +87,6 @@ public class ChatService {
                         user.getUsername(),
                         user.isActive()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
